--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <h1>HomePage</h1>
 <h3>URL LIST</h3>
-<table class="table">
+<table class="table table-bordered">
     <thead class="thead">
       <tr>
         <th scope="col">Halaman</th>
@@ -11,6 +11,10 @@
       <tr>
         <td>Dashboard</td>
         <td><a href="http://localhost:1500/dashboard">http://localhost:1500/dashboard</a></td>
+      </tr>
+      <tr>
+        <td>List Cars</td>
+        <td><a href="http://localhost:1500/cars">http://localhost:1500/cars</a></td>
       </tr>
 
     </tbody>
