--- a/public/css/listcars.scss
+++ b/public/css/listcars.scss
@@ -11,9 +11,7 @@
         }    
     }
     .car-category{
-        padding-left: 25px;
-        display: flex;
-        column-width: 100vh;
+        padding-left: 25px;    
         .btn{
             background-color: transparent;
             color: #AEB7E1;
@@ -34,15 +32,28 @@
             
         }
     }
+
+    
+
+    
+   
+}
+.car-collection{
+    max-width: fit-content;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
     .card{
-        width: 351px;
-        height: 483px;
-        margin: 24px;
+        width: fit-content;
+        height: fit-content;
+        margin-top: 24px;
+        margin-left: 24px;
         padding: 24px;
         .card-body{
             .btn{
-                width: 49%;
-                margin-top: 2%;
+                width: 48%;
+                margin-top: 24px;
             }
 
             p{
@@ -50,5 +61,4 @@
             }
         }
     }
-   
 }
