--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -17,17 +17,17 @@
         <div id="login-form" class="">
                 <img src="media/logo.png" alt="" class="py-4">
                 <h3 class="font-weight-bold py-4">Welcome, Admin BCR</h3>
-                <form class="">
-                    <div class="form-group">
-                      <label for="formGroupExampleInput">Email</label>
-                      <input type="text" class="form-control" id="form-email" placeholder="Contoh: johndee@gmail.com">
-                    </div>
-                    <div class="form-group">
-                      <label for="formGroupExampleInput2">Password</label>
-                      <input type="password" class="form-control" id="form-password" placeholder="6+ karakter">
-                    </div>
-                  </form>
-                  <button id="btn-signin" class="btn btn-primary btn-block mt-4">Sign In</button>
+                <form class="" method="post">
+                  <div class="form-group">
+                    <label for="username">Email</label>
+                    <input type="text" class="form-control" id="username" placeholder="Contoh: johndee@gmail.com">
+                  </div>
+                  <div class="form-group">
+                    <label for="password">Password</label>
+                    <input type="password" class="form-control" id="password" placeholder="6+ karakter">
+                  </div>
+                </form>
+                  <button id="btn-signin" class="btn btn-primary btn-block mt-4" type="submit">Sign In</button>
         </div>
     </div>
     
