--- a/views/layouts/template.ejs
+++ b/views/layouts/template.ejs
@@ -9,6 +9,7 @@
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/template.css">
+    <link rel="stylesheet" href="/css/addcar.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="/css/listcars.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
@@ -25,13 +26,13 @@
             <div id="sidbar-menu" class="my-2">
                 <div class="main-nav text-center py-3">
                     <div class="main-nav-item ">
-                        <a href="#" class="text-white anchor">
+                        <a href="/dashboard" class="text-white anchor">
                             <i class='bx bx-home-alt bx-sm'></i><br>
                             Dashboard
                         </a>
                     </div>
                     <div class="main-nav-item text-white py-3">
-                        <a href="#" class="text-white ">
+                        <a href="/cars" class="text-white ">
                             <i class='bx bxs-truck bx-sm'></i><br>
                             Cars
                         </a>
