--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,6 +16,10 @@
         <td>List Cars</td>
         <td><a href="http://localhost:1500/cars">http://localhost:1500/cars</a></td>
       </tr>
+      <tr>
+        <td>Login Page</td>
+        <td><a href="http://localhost:1500/auth">http://localhost:1500/auth</a></td>
+      </tr>
 
     </tbody>
 </table>
