--- a/views/cars/listcars.ejs
+++ b/views/cars/listcars.ejs
@@ -17,6 +17,8 @@
     </div>
     
 </div>
+
+
 <div class="car-collection">
     <div class="card shadow-sm" >
         <img src="/media/Group 16.png" class="card-img-top" alt="...">
@@ -25,7 +27,7 @@
           <h5 class="card-title">Rp. 430.000 / Hari</h5>
           <p class="card-text">Start rent - Finish rent</p>
           <p class="card-text">Updated at 4 Apr 2022, 09.00</p>
-          <a href="#" class="btn btn-outline-danger"><i class='bx bx-trash-alt pr-2'></i>Delete</a>
+          <a href="#" class="btn btn-outline-danger" data-toggle="modal" data-target="#exampleModal"><i class='bx bx-trash-alt pr-2'></i>Delete</a>
           <a href="#" class="btn btn-success"><i class='bx bx-edit pr-2'></i>Edit</a>
         </div>
     </div>
@@ -36,8 +38,7 @@
           <h5 class="card-title">Rp. 430.000 / Hari</h5>
           <p class="card-text">Start rent - Finish rent</p>
           <p class="card-text">Updated at 4 Apr 2022, 09.00</p>
-          <a href="#" class="btn btn-outline-danger"><i class='bx bx-trash-alt pr-2'></i>Delete</a>
-          <a href="#" class="btn btn-success"><i class='bx bx-edit pr-2'></i>Edit</a>
+          <a href="#" class="btn btn-outline-danger" data-toggle="modal" data-target="#exampleModal"><i class='bx bx-trash-alt pr-2'></i>Delete</a>          <a href="#" class="btn btn-success"><i class='bx bx-edit pr-2'></i>Edit</a>
         </div>
     </div>
     <div class="card shadow-sm" >
@@ -47,8 +48,7 @@
           <h5 class="card-title">Rp. 430.000 / Hari</h5>
           <p class="card-text">Start rent - Finish rent</p>
           <p class="card-text">Updated at 4 Apr 2022, 09.00</p>
-          <a href="#" class="btn btn-outline-danger"><i class='bx bx-trash-alt pr-2'></i>Delete</a>
-          <a href="#" class="btn btn-success"><i class='bx bx-edit pr-2'></i>Edit</a>
+          <a href="#" class="btn btn-outline-danger" data-toggle="modal" data-target="#exampleModal"><i class='bx bx-trash-alt pr-2'></i>Delete</a>          <a href="#" class="btn btn-success"><i class='bx bx-edit pr-2'></i>Edit</a>
         </div>
     </div>
     <div class="card shadow-sm" >
@@ -58,8 +58,7 @@
           <h5 class="card-title">Rp. 430.000 / Hari</h5>
           <p class="card-text">Start rent - Finish rent</p>
           <p class="card-text">Updated at 4 Apr 2022, 09.00</p>
-          <a href="#" class="btn btn-outline-danger"><i class='bx bx-trash-alt pr-2'></i>Delete</a>
-          <a href="#" class="btn btn-success"><i class='bx bx-edit pr-2'></i>Edit</a>
+          <a href="#" class="btn btn-outline-danger" data-toggle="modal" data-target="#exampleModal"><i class='bx bx-trash-alt pr-2'></i>Delete</a>          <a href="#" class="btn btn-success"><i class='bx bx-edit pr-2'></i>Edit</a>
         </div>
     </div>
     <div class="card shadow-sm" >
@@ -69,8 +68,7 @@
           <h5 class="card-title">Rp. 430.000 / Hari</h5>
           <p class="card-text">Start rent - Finish rent</p>
           <p class="card-text">Updated at 4 Apr 2022, 09.00</p>
-          <a href="#" class="btn btn-outline-danger"><i class='bx bx-trash-alt pr-2'></i>Delete</a>
-          <a href="#" class="btn btn-success"><i class='bx bx-edit pr-2'></i>Edit</a>
+          <a href="#" class="btn btn-outline-danger" data-toggle="modal" data-target="#exampleModal"><i class='bx bx-trash-alt pr-2'></i>Delete</a>          <a href="#" class="btn btn-success"><i class='bx bx-edit pr-2'></i>Edit</a>
         </div>
     </div>
     <div class="card shadow-sm" >
@@ -80,8 +78,7 @@
           <h5 class="card-title">Rp. 430.000 / Hari</h5>
           <p class="card-text">Start rent - Finish rent</p>
           <p class="card-text">Updated at 4 Apr 2022, 09.00</p>
-          <a href="#" class="btn btn-outline-danger"><i class='bx bx-trash-alt pr-2'></i>Delete</a>
-          <a href="#" class="btn btn-success"><i class='bx bx-edit pr-2'></i>Edit</a>
+          <a href="#" class="btn btn-outline-danger" data-toggle="modal" data-target="#exampleModal"><i class='bx bx-trash-alt pr-2'></i>Delete</a>          <a href="#" class="btn btn-success"><i class='bx bx-edit pr-2'></i>Edit</a>
         </div>
     </div>
     <div class="card shadow-sm" >
@@ -91,8 +88,7 @@
           <h5 class="card-title">Rp. 430.000 / Hari</h5>
           <p class="card-text">Start rent - Finish rent</p>
           <p class="card-text">Updated at 4 Apr 2022, 09.00</p>
-          <a href="#" class="btn btn-outline-danger"><i class='bx bx-trash-alt pr-2'></i>Delete</a>
-          <a href="#" class="btn btn-success"><i class='bx bx-edit pr-2'></i>Edit</a>
+          <a href="#" class="btn btn-outline-danger" data-toggle="modal" data-target="#exampleModal"><i class='bx bx-trash-alt pr-2'></i>Delete</a>          <a href="#" class="btn btn-success"><i class='bx bx-edit pr-2'></i>Edit</a>
         </div>
     </div>
     <div class="card shadow-sm" >
@@ -102,8 +98,7 @@
           <h5 class="card-title">Rp. 430.000 / Hari</h5>
           <p class="card-text">Start rent - Finish rent</p>
           <p class="card-text">Updated at 4 Apr 2022, 09.00</p>
-          <a href="#" class="btn btn-outline-danger"><i class='bx bx-trash-alt pr-2'></i>Delete</a>
-          <a href="#" class="btn btn-success"><i class='bx bx-edit pr-2'></i>Edit</a>
+          <a href="#" class="btn btn-outline-danger" data-toggle="modal" data-target="#exampleModal"><i class='bx bx-trash-alt pr-2'></i>Delete</a>          <a href="#" class="btn btn-success"><i class='bx bx-edit pr-2'></i>Edit</a>
         </div>
     </div>
     <div class="card shadow-sm" >
@@ -113,8 +108,35 @@
           <h5 class="card-title">Rp. 430.000 / Hari</h5>
           <p class="card-text">Start rent - Finish rent</p>
           <p class="card-text">Updated at 4 Apr 2022, 09.00</p>
-          <a href="#" class="btn btn-outline-danger"><i class='bx bx-trash-alt pr-2'></i>Delete</a>
-          <a href="#" class="btn btn-success"><i class='bx bx-edit pr-2'></i>Edit</a>
+          <a href="#" class="btn btn-outline-danger" data-toggle="modal" data-target="#exampleModal"><i class='bx bx-trash-alt pr-2'></i>Delete</a>          <a href="#" class="btn btn-success"><i class='bx bx-edit pr-2'></i>Edit</a>
         </div>
     </div>
+
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-body">
+          <img src="/media/img-BeepBeep.png" class="mx-auto d-block"/>
+          <h5 class="text-center my-2">
+            <strong>Menghapus Data Mobil</strong>
+          </h5>
+          <p class="text-dark text-center">
+            Setelah dihapus, data mobil tidak dapat
+            dikembalikan. Yakin ingin menghapus?
+          </p>
+        </div>
+        <div class="modal-footer">
+          <div class="container mx-auto d-flex justify-content-around tombol">
+            <button type="button" class="btn btn-primary ya">
+              Ya
+            </button>
+            <button type="button" class="btn btn-outline-light no" data-dismiss="modal">
+              Tidak
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>  
+
 </div>
